--- a/balance/templates/inicio.html
+++ b/balance/templates/inicio.html
@@ -14,7 +14,7 @@
 
     </header>
     <nav>
-        Inicio | Compra | Status
+        <a href="/">Inicio</a> | <a href="/compra">Compra</a> | <a href="/Status">Status</a>
     </nav>
 
     <main>
@@ -42,9 +42,16 @@
                 </td>
                 <td>{{ mov.To }}</td>
             </tr>
-            <tr>
-                <td colspan="5"> {{ mov.errores }} </td>
-            </tr>
+            {% if mov.errores %}
+                <tr>
+                    <td colspan="5" class="errores"> 
+                        ERRORES:
+                        {% for error in mov.errores %}
+                            {{ error }} 
+                        {% endfor %}
+                    </td>
+                </tr>
+            {% endif %}
         {% endfor %}
     </table>
 </main>
