--- a/balance/templates/compra.html
+++ b/balance/templates/compra.html
@@ -26,10 +26,9 @@ COMPRA DE CRIPTOS
         <div class="campo-formulario">
             <label for="from">From</form>
             <input type="text" name="From" id="From">
-        </div>
-
-        <div class="campo-formulario">
-            <label for="Q">Q</form>
+        
+        <div class="campo-formulario"></div>
+            <label for="Q">QF</form>
             <input type="text" name="Q" id="Q">
         </div>
 
@@ -37,9 +36,14 @@ COMPRA DE CRIPTOS
             <label for="to">To</form>
             <input type="text" name="To" id="To">
         </div>
-
-        <button type="submit">Agregar</button>
-        
+      
+        <div class="campo-formulario">
+            <label for="Q">QT</form>
+            <input type="text" name="Q" id="Q">
+        </div>
+        <div class="campo-boton">
+            <button class="blue-button" type="submit">Agregar</button>
+        </div>  
     </form>
     
 {% endblock contenido %}
