realizo cambios varios

--- a/balance/templates/compra.html
+++ b/balance/templates/compra.html
@@ -11,7 +11,7 @@ COMPRA DE CRIPTOS
 {% block contenido %}
     {{ super() }}
 
-    <form action="/compra">
+    <form action="/compra" method="post">
 
         <div class="campo-formulario">
             <label for="fecha">Fecha</form>
