--- a/balance/templates/componentes/navbar.html
+++ b/balance/templates/componentes/navbar.html
@@ -1,6 +1,6 @@
 <nav>
     <a href="/">Inicio</a> | 
-    <a href="/compra">Compra</a> |
+    <a href="/Purchase">Purchase</a> |
     <a href="/Status">Status</a> |
     <a href="/Salir">Salir</a>
 </nav>
