--- a/balance/templates/inicio.html
+++ b/balance/templates/inicio.html
@@ -12,7 +12,7 @@ Movimientos
 
     {{ super() }}
     <!-- BOTON DE AGREGAR -->
-    <form action="/compra">
+    <form action="/purchase">
         <div class="campo-boton">
             <button class="rounded-button" type="submit">+</button>
         </div> 
