generamos base de datos y establecemos conexion

--- a/balance/templates/componentes/navbar.html
+++ b/balance/templates/componentes/navbar.html
@@ -1,6 +1,6 @@
 <nav>
     <a href="/">Inicio</a> | 
-    <a href="/Purchase">Purchase</a> |
-    <a href="/Status">Status</a> |
-    <a href="/Salir">Salir</a>
+    <a href="/purchase">Purchase</a> |
+    <a href="/status">Status</a> |
+    <a href="/salir">Salir</a>
 </nav>
