varios cambios, añado icono calculadora

--- a/balance/templates/purchase.html
+++ b/balance/templates/purchase.html
@@ -39,8 +39,8 @@ COMPRA DE CRIPTOS
              </select>
         </div>
         
-        <div class="campo-formulario"></div>
-            <label for="Q">QF</label>
+        <div class="campo-formulario">
+            <label for="Q">QF</label><a href="/"><ion-icon name="calculator"></ion-icon></a>
             <input type="text" name="QF" id="QF">
         </div>
 
