--- a/balance/templates/base.html
+++ b/balance/templates/base.html
@@ -8,6 +8,7 @@
     <!-- LINK PARA TRAER LOS ESTILOS -->
     <link rel="stylesheet" href="static/css/flat-remix.css">
     <link rel="stylesheet" href="static/css/styles.css">
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </head>
 <body>
     <!-- PARA INCLUIR LA CABECERA, ETC DESDE OTRO ARCHIVO POR SEPARADO -->
