--- a/balance/templates/purchase.html
+++ b/balance/templates/purchase.html
@@ -10,25 +10,25 @@ COMPRA DE CRIPTOS
 
 {% block contenido %}
     {{ super() }}
-
+    
     {% if resultado %}
         <h1>Movimiento añadido</h1>
     {% endif %}
     <form action="/purchase" method="POST">
 
+        <!-- 
         <div class="campo-formulario">
-            <label for="fecha">Fecha</label>
-            <input type="date" name="date" id="date" value="{{ datos.date }}">
-        </div>
+             <label for="fecha">Fecha</label>
+             <input type="date" name="date" id="date" value="{{ datos.date }}" required>
+         </div>
       
-        <div class="campo-formulario">
-            <label for="hora">Hora</label>
-            <input type="time" name="time" id="time" value="{{ datos.time }}">
-        </div>
+         <div class="campo-formulario">
+             <label for="hora">Hora</label>
+             <input type="time" name="time" id="time" value="{{ datos.time }}" required>
+         </div> -->
 
         <div class="campo-formulario">
             <label for="from">From</label>
-          
             <select name="from_currency">
                 <option value="EUR">EUR</option> 
                 <option value="BTC">BTC</option> 
@@ -44,13 +44,12 @@ COMPRA DE CRIPTOS
         </div>
         
         <div class="campo-formulario">
-            <label for="Q">QF</label><a href="/"><ion-icon name="calculator"></ion-icon></a>
-            <input type="number" name="from_quantity" id="from_quantity" value="{{ datos.from_quantity }}">
+            <label for="Q">QF</label><button type="submit" class="green-button" ><ion-icon name="calculator"></ion-icon></button>
+            <input type="number" name="from_quantity" id="from_quantity" value="{{ datos.from_quantity }}" required>
         </div>
 
         <div class="campo-formulario">
             <label for="to">To</label>
-            
             <select name="to_currency">
                 <option value="EUR">EUR</option>
                 <!-- selected para que no aparezcan en los dos campos EUR EUR -->
@@ -68,11 +67,13 @@ COMPRA DE CRIPTOS
       
         <div class="campo-formulario">
             <label for="Q">QT</label>
-            <input type="number" name="to_quantity" id="to_quantity" value="{{ datos.to_quantity }}">
+            <input type="number" name="to_quantity" id="to_quantity" value="{{ datos.to_quantity }}" required>
         </div>
+
         <div class="campo-boton">
             <button type="submit" class="blue-button" >Agregar</button>
         </div>  
     </form>
+    
     
 {% endblock contenido %}
