intentando conectar con api

--- a/balance/templates/purchase.html
+++ b/balance/templates/purchase.html
@@ -59,8 +59,8 @@ COMPRA DE CRIPTOS
             <input type="text" name="to_quantity" id="to_quantity" value="{{ datos.to_quantity }}" disabled required>
         </div>
 
-        <div class="campo-boton">
-            <button type="submit" class="blue-button" >Agregar</button>
+        <div class="campo-formulario">
+            <button type="submit" class="blue-button" ><ion-icon name="checkmark"></ion-icon></button>
         </div>  
     </form>
     
